# qa-evals-agent

./: .env.example  .gitignore  README.md  experiments.py  observability.py  prompts.py  pyproject.toml  server.py
LLM_JUDGE_PROMPTS_LANGFUSE/: QA_EXPERIMENT_GOLDEN_DATASET_JUDGE_PROMPT.txt  QA_RELEVENCE_DEVELOPMENT_NO_REFERENCE.txt
data/: bugs.json  features.json  project_description.json
testing/: README.md  run_tests.py  user_queries.csv
web/: app.js  index.html  styles.css
